style(blog): add outline divider

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -205,3 +205,32 @@ html.dark {
 .blog-theme-layout .VPContent:not(.is-home) .VPDoc aside {
   background: transparent;
 }
+
+@media (min-width: 1280px) {
+  .blog-theme-layout #VPContent:not(.is-home) .VPDoc .aside {
+    position: relative;
+  }
+
+  .blog-theme-layout #VPContent:not(.is-home) .VPDoc .aside::before {
+    content: '';
+    position: absolute;
+    top: calc(
+      var(--vp-nav-height) +
+      var(--vp-layout-top-height, 0px) +
+      var(--vp-doc-top-height, 0px)
+    );
+    left: 0;
+    width: 1px;
+    height: calc(
+      100vh -
+        (
+          var(--vp-nav-height) +
+          var(--vp-layout-top-height, 0px) +
+          var(--vp-doc-top-height, 0px)
+        )
+    );
+    display: block;
+    background: linear-gradient(var(--vp-c-gutter), var(--vp-c-divider));
+    pointer-events: none;
+  }
+}
