--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -131,7 +131,20 @@ html.dark {
   padding: 0;
 }
 
+/* 博客首页头像卡片与列表联动间距 */
+@media (min-width: 960px) {
+  .blog-theme-layout .content-wrapper .blog-info-wrapper {
+    top: calc(var(--vp-nav-height) + 24px);
+  }
 
+  .blog-theme-layout .content-wrapper .blog-list-wrapper {
+    padding-top: 24px;
+  }
+}
+
+@media (max-width: 959.98px) {
+  .blog-theme-layout .content-wrapper .blog-info-wrapper {
+    top: 20px;
   }
 }
 
