--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -319,12 +319,12 @@ html.dark {
 
 .blog-theme-layout .VPContent:not(.is-home)::before {
   content: '';
-  position: fixed;
+  position: absolute;
   inset: 0;
+  height: 100%;
   z-index: -1;
   background-image: var(--blog-bg-texture, none);
   background-repeat: repeat;
-  min-height: 100%;
   pointer-events: none;
 }
 
