fix(theme): add blog article divider

--- a/docs/.vitepress/theme/custom.css
+++ b/docs/.vitepress/theme/custom.css
@@ -227,17 +227,6 @@ html.dark {
     width: var(--xl-sidebar-fixed-width);
     min-width: var(--xl-sidebar-fixed-width);
     box-sizing: border-box;
-    position: relative;
-  }
-
-  .blog-theme-layout:has(.VPContent:not(.is-home)) .VPSidebar .sidebar::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    width: 1px;
-    pointer-events: none;
   }
 
   .blog-theme-layout .VPSidebar .sidebar .card-header {
@@ -320,8 +309,25 @@ html.dark {
     position: relative;
   }
 
-}\r\n
-\n\n\n
+}
+
+@media (min-width: 960px) {
+  .blog-theme-layout .VPContent:not(.is-home) .VPDoc {
+    position: relative;
+  }
+
+  .blog-theme-layout .VPContent:not(.is-home) .VPDoc::before {
+    content: '';
+    position: absolute;
+    left: var(--xl-article-divider-left, 0px);
+    top: var(--xl-article-divider-top, 0px);
+    width: 1px;
+    height: var(--xl-article-divider-height, 0px);
+    background: var(--vp-c-divider);
+    pointer-events: none;
+  }
+}
+
 
 /* 顶部导航统一分隔线 */
 .VPNav,
